package modelo.elementos;

public abstract class ValorAzar {
    public abstract int obtenerValor ();
}
